--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>Mensaje de bienvenida</p>
     <audio controls>
       <source src="audios/bienvenida.mp3" type="audio/mpeg">
-      Tu navegador no soporta el elemento de audio.
+      Tu navegador no soporta el elemento de audio
     </audio>
   </div>
 
@@ -39,7 +39,7 @@
     <p>Frase divertida</p>
     <audio controls>
       <source src="audios/frase_divertida.mp3" type="audio/mpeg">
-      Tu navegador no soporta el elemento de audio.
+      Tu navegador no soporta el elemento de audio
     </audio>
   </div>
 
@@ -47,7 +47,7 @@
     <p>Recordatorio personal</p>
     <audio controls>
       <source src="audios/recordatorio.mp3" type="audio/mpeg">
-      Tu navegador no soporta el elemento de audio.
+      Tu navegador no soporta el elemento de audio
     </audio>
   </div>
 
